Meymoun est passé par la

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assets/css/index.css" />
 </head>
 
+<!-- sass --watch assets/css/style.scss assets/css/index.css -->
+
 <body>
 
     <header class="section-margin">
@@ -134,8 +136,8 @@
         </div>
 
         <div class="logo-2-generations">
-            <a href="https://ensemble2generations.fr/" target="_blank"><img src="assets/images/logo-2-generations.png"
-                    alt="logo-2-generations"></a>
+            <a href="https://ensemble2generations.fr/" target="_blank" rel="noopener"><img
+                    src="assets/images/logo-2-generations.png" alt="logo-2-generations"></a>
         </div>
 
 
