tournesol de bg

--- a/index.html
+++ b/index.html
@@ -76,12 +76,17 @@
             </div>
 
             <div class="qsn-txt">
-                <p>Nous sommes une association d’intérêt général à but non lucratif, basée à Gradignan. Au coeur de
-                    notre démarche : la volonté d’agir, de répondre aux problèmes qui touchent tant les séniors que les
-                    étudiants. Notre démarche nécessite la solidarité des gradignanais mais aussi l’action sociale
-                    auprès des organismes et des institutions. Totem, Liens & Chemins promeut et propulse le sens du
-                    lien et de l’écoute, au service de tous.</p>
+                <div class="qsn-tournesol"><img src="/assets/images/tournesol.png" alt=""></div>
+                <div class="qsn-p">
+                    <p>Nous sommes une association d’intérêt général à but non lucratif, basée à Gradignan. Au coeur de
+                        notre démarche : la volonté d’agir, de répondre aux problèmes qui touchent tant les séniors que
+                        les
+                        étudiants. Notre démarche nécessite la solidarité des gradignanais mais aussi l’action sociale
+                        auprès des organismes et des institutions. Totem, Liens & Chemins promeut et propulse le sens du
+                        lien et de l’écoute, au service de tous.</p>
+                </div>
             </div>
+
 
         </div>
 
