--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#taches-partagees">Les tâches partagées</a></li>
             </ul>
         </div>
-        
+
 
         <a href="#" id="openBtn">
             <span class="burger-icon">
@@ -52,9 +52,9 @@
     <section class="bienvenu section-margin">
 
         <div class="bienvenu-txt">
-            <h1>Bienvenu chez</h1>
-            <h1><span class="green-txt">Totem</span>, Liens & Chemins !</h1>
-            <p>L’association d’intérêt général, oeuvrant à l’émergence de projets solidaires durables et humains.</p>
+            <h1>Bienvenue chez</h1>
+            <h1><span class="green-txt">Totem, Liens & Chemins </span>!</h1>
+            <p>Association d’intérêt général, oeuvrant à l’émergence de projets solidaires durables et humains.</p>
         </div>
 
         <div class="bienvenu-perso">
@@ -100,12 +100,13 @@
         <p>Le transport solidaire « <span class="green-txt">Les chemins partagés</span> », une solution contre
             l’isolement des séniors.</p>
 
-        <p> Les chemins partagés, c’est un réseau de bénévoles qui se rendent disponibles pour <span
-                class="green-txt">transporter</span> un sénior sur
-            les lieux de vie, supermarché, cinéma, fleuriste etc. Sur place, les séniors peuvent profiter de la vie
-            urbaine pendant une durée déterminée au préalable.<br>
-            Nous avons organisé le transport solidaire pour que chaque bénévole soit libéré après avoir fait un aller ou
-            un retour. Il peut ensuite retourner à ses obligations.<br>
+        <p> Les chemins partagés, c’est un réseau de bénévoles qui se rendent disponibles pour <span class="green-txt">transporter</span> un sénior qui
+            n’a pas de moyen de déplacement : supermarché, docteur ou cinéma, théâtre. <br>
+            Un bénévole et un sénior signent une convention de parrainage qui précise les engagements de chacun,
+            fréquence, destination... en fonction de ses possibilités. L’association reste présente pour toute question,
+            tout souci. Des bénévolants viennent remplacer le parrain s’il ne peut pas assurer un transport. Cette
+            formule sur-mesure permet souplesse et réactivité, et surtout elle renforce le lien entre le parrain et le.a
+            filleul.e. <br>
             Ce geste solidaire coûte peu de temps et donne beaucoup de bonheur.</p>
 
         <div class="devenir-benevole">
@@ -206,6 +207,15 @@
             </div>
         </div>
 
+    </section>
+
+    <section class="section-margin">
+        <h2>Vous souhaitez aider Totem Liens et Chemins ? </h2>
+
+        <div class="aide-img">
+            <a href="https://www.helloasso.com/associations/totem-liens-et-chemins/collectes/un-geste-solidaire-pour-aider-une-asso-solidaire"
+                target="_blank"><img src="assets/images/hello_asso.png" alt="logo-hello-asso"></a>
+        </div>
     </section>
 
     <section class="associes">
