add photos carroussel

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             Ce geste solidaire coûte peu de temps et donne beaucoup de bonheur.</p>
 
         <div class="devenir-benevole">
-            <a href="#contact" class="green-txt">Envie de devenir bénévole ? Contactez-nous !</a>
+            <a href="#contact" class="green-txt">Vous souhaitez devenir bénévole ?<br> Un sénior Gradignanais a besoin d’un transport ?<br> Contactez-nous !</a>
         </div>
 
         <div class="carousel-container">
@@ -119,6 +119,8 @@
                     <div class="slide"><img src="assets/images/carroussel-1.png" alt="image-1-carroussel"></div>
                     <div class="slide"><img src="assets/images/carroussel-2.png" alt="image-2-carroussel"></div>
                     <div class="slide"><img src="assets/images/carroussel-3.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-4.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-5.png" alt="image-3-carroussel"></div>
                 </div>
             </div>
         </div>
