--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </section>
 
     <footer>
-        <p>Association Totem, INC 2022, Tout Droits Réservés</p>
+        <p>Association Totem, INC 2022, Tout Droits Réservés - Fait par <a href="https://linktr.ee/alexandre95calonne?utm_source=linktree_admin_share" target="_blank">Alexandre Calonne</a></p>
     </footer>
 
 
