--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
                     <div class="slide"><img src="assets/images/carroussel-2.png" alt="image-2-carroussel"></div>
                     <div class="slide"><img src="assets/images/carroussel-3.png" alt="image-3-carroussel"></div>
                     <div class="slide"><img src="assets/images/carroussel-4.png" alt="image-3-carroussel"></div>
-                    <div class="slide"><img src="assets/images/carroussel-5.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-6.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-7.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-8.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-9.png" alt="image-3-carroussel"></div>
+                    <div class="slide"><img src="assets/images/carroussel-10.png" alt="image-3-carroussel"></div>
                 </div>
             </div>
         </div>
@@ -233,7 +237,8 @@
     </section>
 
     <footer>
-        <p>Association Totem, INC 2022, Tout Droits Réservés - Fait par <a href="https://linktr.ee/alexandre95calonne?utm_source=linktree_admin_share" target="_blank">Alexandre Calonne</a></p>
+        <p>Association Totem, INC 2022, Tout Droits Réservés - Fait par <a href="https://linktr.ee/alexandre95calonne?utm_source=linktree_admin_share" target="_blank">Alexandre Calonne</a></p> 
+        <p class="docs"><a href="https://docs.google.com/document/d/1Wybte4GM0nkc_ZYNEHgeXquQPt7dXtQ2/edit?usp=drive_link&ouid=115678585260245947537&rtpof=true&sd=true" target="_blank">Status associatifs</a> - <a href="https://drive.google.com/file/d/1H__UynieVj6v-75FAXuTrxc41JnEnlFY/view?usp=drive_link" target="_blank">Règlement intérieur</a></p>
     </footer>
 
 
