[FEAT] logo vivre avec + correction faute statuts

--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
             </div>
         </div>
 
-        <div class="logo-2-generations">
+        <div class="logos">
             <a href="https://ensemble2generations.fr/" target="_blank" rel="noopener"><img
-                    src="assets/images/logo-2-generations.png" alt="logo-2-generations"></a>
+                    src="assets/images/logo-2-generations.png" alt="logo-2-generations" class="logo-2-generations"></a>
+            <a href="https://www.logement-solidaire.org/"><img src="assets/images/vivre-avec.jpg" alt="logo-vive-avec" class="logo-vivre-avec"></a>
         </div>
 
 
@@ -238,7 +239,7 @@
 
     <footer>
         <p>Association Totem, INC 2022, Tout Droits Réservés - Fait par <a href="https://linktr.ee/alexandre95calonne?utm_source=linktree_admin_share" target="_blank">Alexandre Calonne</a></p> 
-        <p class="docs"><a href="https://docs.google.com/document/d/1Wybte4GM0nkc_ZYNEHgeXquQPt7dXtQ2/edit?usp=drive_link&ouid=115678585260245947537&rtpof=true&sd=true" target="_blank">Status associatifs</a> - <a href="https://drive.google.com/file/d/1H__UynieVj6v-75FAXuTrxc41JnEnlFY/view?usp=drive_link" target="_blank">Règlement intérieur</a></p>
+        <p class="docs"><a href="https://docs.google.com/document/d/1Wybte4GM0nkc_ZYNEHgeXquQPt7dXtQ2/edit?usp=drive_link&ouid=115678585260245947537&rtpof=true&sd=true" target="_blank">Statuts associatifs</a> - <a href="https://drive.google.com/file/d/1H__UynieVj6v-75FAXuTrxc41JnEnlFY/view?usp=drive_link" target="_blank">Règlement intérieur</a></p>
     </footer>
 
 
